css changes update copy icon add erase icon fix how collapse saves state to storage check for "1,9" add fEntityName

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -190,6 +190,27 @@ hr {
   display: none;
 }
 
+.stats-copy-icon {
+  // margin-top: 0em;
+  margin-right: 2em;
+  // margin-right: 3em;
+  padding: 0.25em;
+}
+
+.right-icon {
+  // margin-top: 0em;
+  margin-right: 2em;
+  // margin-right: 3em;
+  // padding: 1em;
+}
+
+.mid-icon {
+  // margin-top: 0em;
+  // margin-right: 2em;
+  // margin-right: 3em;
+  padding: 0.25em;
+}
+
 .right-button {
   position: absolute;
   top: 0;
